--- a/RFM-Informatica/src/app/home/home.page.html
+++ b/RFM-Informatica/src/app/home/home.page.html
@@ -1,32 +1,20 @@
 <ion-header [translucent]="true">
-  <ion-toolbar color="primary">
+  <ion-toolbar>
     <ion-title>
-      TEC-Online
+      Blank
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" class="home-content">
+<ion-content [fullscreen]="true">
   <ion-header collapse="condense">
-    <ion-toolbar color="primary">
-      <ion-title size="large">Bem-vindo</ion-title>
+    <ion-toolbar>
+      <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div class="welcome-container">
-    <img src="assets/icon/logotipo.png" alt="Logo" class="app-logo" />
-    <h1>Bem-vindo à TEC-Online</h1>
-    <p>Organize e acompanhe as suas tarefas de forma eficiente.</p>
-
-    <ion-button expand="block" color="secondary" routerLink="/tasks">
-      <ion-icon name="calendar-outline" slot="start"></ion-icon>
-      Ver Tarefas
-    </ion-button>
-
-    <ion-button expand="block" color="tertiary" routerLink="/new-task">
-      <ion-icon name="add-circle-outline" slot="start"></ion-icon>
-      Criar Nova Tarefa
-    </ion-button>
+  <div id="container">
+    <strong>Ready to create an app?</strong>
+    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
 </ion-content>
-
