--- a/RFM-Informatica/src/app/home/home.page.html
+++ b/RFM-Informatica/src/app/home/home.page.html
@@ -1,15 +1,9 @@
-<ion-header [translucent]="true">
-  <ion-toolbar color="primary">
-    <ion-title>TEC-Online</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true" class="home-content">
   <div class="login-wrapper">
     <div class="login-card">
       <img src="assets/icon/logotipo.png" alt="Logo" class="app-logo" />
-      <h1>Bem-vindo</h1>
-      <p>Faça login ou registre-se para começar.</p>
+      <h1>🚀 Bem-vindo de volta!</h1>
+      <p>Entre e organize suas tarefas com estilo.</p>
 
       <ion-item class="input-field">
         <ion-icon name="mail-outline" slot="start"></ion-icon>
@@ -21,15 +15,13 @@
         <ion-input placeholder="Senha" type="password"></ion-input>
       </ion-item>
 
-      <ion-button expand="block" color="secondary">
+      <ion-button expand="block" color="primary" class="btn-animate">
         Entrar
       </ion-button>
 
-      <p class="forgot-password">Esqueceu a senha?</p>
+      <p class="forgot-password">🔑 Esqueceu a senha?</p>
 
-      <p class="divider">ou</p>
-
-      <ion-button expand="block" color="tertiary">
+      <ion-button expand="block" color="secondary" class="btn-animate">
         Criar Nova Conta
       </ion-button>
     </div>
