--- a/RFM-Informatica/src/app/home/home.page.html
+++ b/RFM-Informatica/src/app/home/home.page.html
@@ -1,9 +1,9 @@
 <ion-content [fullscreen]="true" class="home-content">
   <div class="login-wrapper">
-    <div class="login-card">
+    <div class="login">
       <img src="assets/icon/logotipo.png" alt="Logo" class="app-logo" />
       <h1>🚀 Bem-vindo de volta!</h1>
-      <p>Entre e organize suas tarefas com estilo.</p>
+      <p>Entre e organize as suas tarefas com estilo.</p>
 
       <ion-item class="input-field">
         <ion-icon name="mail-outline" slot="start"></ion-icon>
