Redirecionamento do botao Criar nova conta
.....

--- a/RFM-Informatica/src/app/home/home.page.html
+++ b/RFM-Informatica/src/app/home/home.page.html
@@ -21,7 +21,7 @@
 
       <p class="forgot-password">🔑 Esqueceu a senha?</p>
 
-      <ion-button expand="block" color="secondary" class="btn-animate">
+      <ion-button expand="block" color="secondary" class="btn-animate" [routerLink]="['/signup']">
         Criar Nova Conta
       </ion-button>
     </div>
