--- a/RFM-Informatica/src/app/home/home.page.html
+++ b/RFM-Informatica/src/app/home/home.page.html
@@ -19,7 +19,7 @@
         Entrar
       </ion-button>
 
-      <p class="forgot-password">🔑 Esqueceu a senha?</p>
+      <p class="forgot-password">🔑 Esqueceu a pass?</p>
 
       <ion-button expand="block" color="secondary" class="btn-animate" [routerLink]="['/signup']">
         Criar Nova Conta
