Adição da pagina do Plano Semanal

--- a/RFM-Informatica/src/app/home/home.page.html
+++ b/RFM-Informatica/src/app/home/home.page.html
@@ -15,11 +15,11 @@
         <ion-input placeholder="Senha" type="password"></ion-input>
       </ion-item>
 
-      <ion-button expand="block" color="primary" class="btn-animate">
+      <ion-button expand="block" color="primary" class="btn-animate" [routerLink]="['/plano-semanal']">
         Entrar
       </ion-button>
 
-      <p class="forgot-password">🔑 Esqueceu a pass?</p>
+      <p class="forgot-password">🔑 Esqueceu a senha?</p>
 
       <ion-button expand="block" color="secondary" class="btn-animate" [routerLink]="['/signup']">
         Criar Nova Conta
