--- a/RFM-Informatica/src/app/signup/signup.page.html
+++ b/RFM-Informatica/src/app/signup/signup.page.html
@@ -1,49 +1,35 @@
-<ion-content [fullscreen]="true" class="signup-content">
-  <div class="signup-wrapper">
-    <form #signupForm="ngForm" (ngSubmit)="onSubmit(signupForm)">
-      <h1>Registo</h1>
+<ion-content>
+  <div class="signup-container">
+    <img src="assets/icon/logotipo.png" alt="Logo" class="app-logo" />
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Crie sua conta</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <form #signupForm="ngForm" (ngSubmit)="onSubmit(signupForm)">
+          <ion-item>
+            <ion-label position="floating">Usuário</ion-label>
+            <ion-input type="text" [(ngModel)]="username" name="username" required></ion-input>
+          </ion-item>
 
-      <ion-item>
-        <ion-label position="floating">Usuário</ion-label>
-        <ion-input 
-          type="text" 
-          required 
-          [(ngModel)]="username" 
-          name="username">
-        </ion-input>
-      </ion-item>
+          <ion-item>
+            <ion-label position="floating">E-mail</ion-label>
+            <ion-input type="email" [(ngModel)]="email" name="email" required email></ion-input>
+          </ion-item>
 
-      <ion-item>
-        <ion-label position="floating">Email</ion-label>
-        <ion-input 
-          type="email" 
-          required 
-          [(ngModel)]="email" 
-          name="email">
-        </ion-input>
-      </ion-item>
+          <ion-item>
+            <ion-label position="floating">Senha</ion-label>
+            <ion-input type="password" [(ngModel)]="password" name="password" required></ion-input>
+          </ion-item>
 
-      <ion-item>
-        <ion-label position="floating">Senha</ion-label>
-        <ion-input 
-          type="password" 
-          required 
-          [(ngModel)]="password" 
-          name="password">
-        </ion-input>
-      </ion-item>
+          <ion-item>
+            <ion-label position="floating">Confirmar Senha</ion-label>
+            <ion-input type="password" [(ngModel)]="confirmPassword" name="confirmPassword" required></ion-input>
+          </ion-item>
 
-      <ion-item>
-        <ion-label position="floating">Confirmar Senha</ion-label>
-        <ion-input 
-          type="password" 
-          required 
-          [(ngModel)]="confirmPassword" 
-          name="confirmPassword">
-        </ion-input>
-      </ion-item>
-
-      <ion-button expand="full" type="submit" class="submit-btn">Registar</ion-button>
-    </form>
+          <ion-button expand="full" type="submit" [disabled]="!signupForm.valid">Registar</ion-button>
+        </form>
+      </ion-card-content>
+    </ion-card>
   </div>
 </ion-content>
