--- a/RFM-Informatica/src/app/plano-semanal/plano-semanal.page.html
+++ b/RFM-Informatica/src/app/plano-semanal/plano-semanal.page.html
@@ -1,30 +1,33 @@
 <ion-header>
+  <ion-row>
+    <ion-col size="12" class="ion-text-center">
+      <img src="assets/icon/logotipo.png" alt="Logo" class="logo" />
+    </ion-col>
+  </ion-row>
   <ion-toolbar>
-    <ion-title>Ola (User)</ion-title>
+    <ion-title>Olá (User)</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-grid>
-    <ion-row>
-      <ion-col size="12" class="ion-text-center">
-        <img src="assets/logo.png" alt="Logo" class="logo" />
-      </ion-col>
-    </ion-row>
-    
+
+
     <ion-row>
       <ion-col>
-        <ion-label> Cronograma </ion-label>
+        <ion-label>Cronograma</ion-label>
         <ion-select [(ngModel)]="selectedRange" interface="popover">
           <ion-select-option value="5">Próximos 5 dias</ion-select-option>
           <ion-select-option value="7">Próximos 7 dias</ion-select-option>
+          <ion-select-option value="15">Próximos 15 dias</ion-select-option>
+          <ion-select-option value="30">Próximos 30 dias</ion-select-option>
         </ion-select>
       </ion-col>
       <ion-col>
         <ion-searchbar placeholder="Procurar Tarefa"></ion-searchbar>
       </ion-col>
     </ion-row>
-    
+
     <ion-row>
       <ion-col>
         <h2>Segunda-feira, 24 de Fevereiro de 2025</h2>
@@ -32,13 +35,23 @@
         <h3>Nome da Tarefa</h3>
       </ion-col>
     </ion-row>
-    
+
     <ion-row>
       <ion-col>
-        <ion-datetime [(ngModel)]="selectedDate" presentation="date"></ion-datetime>
+        <ion-button expand="full" (click)="openCalendar()">Selecionar Data</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
+
+  <!-- Modal do Calendário -->
+  <ion-modal [isOpen]="showCalendar" (didDismiss)="closeCalendar()">
+    <ion-content>
+      <ion-datetime [(ngModel)]="selectedDate"></ion-datetime>
+      <ion-button expand="full" (click)="closeCalendar()">OK</ion-button>
+    </ion-content>
+  </ion-modal>
+  
+
 </ion-content>
 
 <ion-footer>
