--- a/RFM-Informatica/src/app/signup/signup.page.html
+++ b/RFM-Informatica/src/app/signup/signup.page.html
@@ -1,35 +1,39 @@
 <ion-content>
-  <div class="signup-container">
+  <div class="center-content">
     <img src="assets/icon/logotipo.png" alt="Logo" class="app-logo" />
-    <ion-card>
-      <ion-card-header>
-        <ion-card-title>Crie sua conta</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <form #signupForm="ngForm" (ngSubmit)="onSubmit(signupForm)">
-          <ion-item>
-            <ion-label position="floating">Usuário</ion-label>
-            <ion-input type="text" [(ngModel)]="username" name="username" required></ion-input>
-          </ion-item>
 
-          <ion-item>
-            <ion-label position="floating">E-mail</ion-label>
-            <ion-input type="email" [(ngModel)]="email" name="email" required email></ion-input>
-          </ion-item>
+    <div class="form-box">
+      <h2>Crie sua conta</h2>
 
-          <ion-item>
-            <ion-label position="floating">Senha</ion-label>
-            <ion-input type="password" [(ngModel)]="password" name="password" required></ion-input>
-          </ion-item>
+      <form #signupForm="ngForm" (ngSubmit)="onSubmit(signupForm)">
+        <ion-item>
+          <ion-label position="floating">Usuário</ion-label>
+          <ion-input type="text" [(ngModel)]="username" name="username" required></ion-input>
+        </ion-item>
 
-          <ion-item>
-            <ion-label position="floating">Confirmar Senha</ion-label>
-            <ion-input type="password" [(ngModel)]="confirmPassword" name="confirmPassword" required></ion-input>
-          </ion-item>
+        <ion-item>
+          <ion-label position="floating">E-mail</ion-label>
+          <ion-input type="email" [(ngModel)]="email" name="email" required email></ion-input>
+        </ion-item>
 
-          <ion-button expand="full" type="submit" [disabled]="!signupForm.valid">Registar</ion-button>
-        </form>
-      </ion-card-content>
-    </ion-card>
+        <ion-item>
+          <ion-label position="floating">Senha</ion-label>
+          <ion-input type="password" [(ngModel)]="password" name="password" required></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Confirmar Senha</ion-label>
+          <ion-input type="password" [(ngModel)]="confirmPassword" name="confirmPassword" required></ion-input>
+        </ion-item>
+
+        <ion-button expand="full" fill="solid" class="btn-back" (click)="goBack()">
+          Registar
+        </ion-button>
+
+        <ion-button expand="full" fill="solid" class="btn-back" (click)="goBack()">
+          Voltar
+        </ion-button>
+      </form>
+    </div>
   </div>
 </ion-content>
