--- a/RFM-Informatica/src/app/plano-semanal/plano-semanal.page.scss
+++ b/RFM-Informatica/src/app/plano-semanal/plano-semanal.page.scss
@@ -33,8 +33,13 @@ ion-toolbar {
   border-bottom: 3px solid #0056b3;
 }
 
-/* Cronograma */
-.label-title {
+/* Cronograma e Pesquisa alinhados */
+.top-bar {
+  display: flex;
+  align-items: center;
+}
+
+ion-label {
   font-size: 1rem;
   font-weight: bold;
   color: #004085;
@@ -42,10 +47,11 @@ ion-toolbar {
 
 ion-select,
 ion-searchbar {
-  background: #e3f2fd; /* Azul bem claro */
+  background: #e3f2fd;
   border-radius: 8px;
   padding: 5px;
   border: 1px solid #007bff;
+  width: 100%;
 }
 
 /* Estilizando as Tarefas */
@@ -96,4 +102,9 @@ ion-button {
 ion-button ion-icon {
   font-size: 1.2rem;
   margin-right: 5px;
+}
+
+/* Alinhamento do botão "Serviços Finalizados" mais à esquerda */
+.left-align {
+  margin-left: -10px;
 }
